<resources>
    <string name="app_name">Trashly</string>
    <string name="title_home">profile</string>
    <string name="title_dashboard">Buy</string>
    <string name="title_notifications">Sell</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    <string name="default_web_client_id_auth">"732380468145-mf32cphsv9ielj783g1383u2g607nkr7.apps.googleusercontent.com"</string>-->


    <string name="olx">OLX</string>
    <string name="india">India</string>
    <string name="continue_with_google">Sign in</string>
    <string name="continue_with_facebook">New user Signup</string>
    <string name="facebook_app_id">534574441041777</string>
    <string name="fb_login_protocol_scheme">fb534574441041777</string>
    <string name="title_activity_demmi">DemmiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Ind_ia">India</string>
    <string name="find_cars"><![CDATA[Find Recycled plastic items & more....]]></string>
    <string name="browse_cat">Browse Categories</string>
    <string name="title_sell">Sell</string>
    <string name="offering">What are you offering?</string>
    <string name="brand">Brand</string>
    <string name="year">Year *</string>
    <string name="km_driven">KM driven</string>
    <string name="ad_title">Ad Title *</string>
    <string name="mention_the_key">Mention the number of items you are selling</string>
    <string name="describe_what_selling">Describe what you are selling *</string>
    <string name="include_conditions">Include condition, features and reason for selling *</string>
    <string name="price">Price *</string>
    <string name="str_address">Address *</string>
    <string name="str_phone">Phone Number *</string>

    <string name="enter_address">Enter Address</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="required_fields">* Required Fields</string>
    <string name="title_include_details">Include Details</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="enter_ad_title">Enter Ad Title</string>
    <string name="enter_desc">Enter Description</string>
    <string name="enter_year">Enter year</string>
    <string name="enter_price">Enter Price</string>
    <string name="choose_photo">Click a Photo</string>
    <string name="upload_five">Upload upto five photos</string>
    <string name="preview">Preview</string>
    <string name="upload">Upload</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_source">Select Source</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="_100_00">Rs 60.00</string>
    <string name="hazratganj_lucknow">1 lt Bottle</string>
    <string name="mobile_brand">Plastick</string>
    <string name="_30_10_1999">30/10/1999</string>
    <string name="_25_oct">25 Oct</string>
    <string name="title_my_adds">My Ads</string>
    <string name="details">Details</string>
    <string name="adprice">Price</string>
    <string name="adAddress">Address</string>
    <string name="adDescription">Description</string>
    <string name="date_posted">Date Posted</string>
    <string name="phone_number">Phone Number</string>
    <string name="adYear">Year</string>
    <string name="call">Call</string>
    <string name="title_details">Details</string>
    <string name="title_browse">Browse</string>
    <string name="mr_joe">Rishav Gupta</string>
    <string name="abc_xyz_com">rishavgupta@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="postal_address">Postal Address</string>
    <string name="save">Save</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_postal_address">Enter postal address</string>
    <string name="saved_success">Saved Successfully</string>
    <string name="title_settings">Settings</string>

    <string name="title_activity_ads">AdsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="ads">ADS</string>
    <string name="favourites">FAVOURITES</string>
    <string name="title_activity_tabbed_ads_fragment">TabbedAdsFragment</string>
    <string name="my_ads">My Ads</string>
    <string name="title_activity_tabbed_fragment">TabbedFragment</string>
    <string name="title_activity_ads_fragment">AdsFragment</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_favourite">Buy</string>
    <string name="title_favourites">Favourites</string>
    <string name="rm_fav">Remove from favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>