<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/listitem">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/box_grey_bg_white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            tools:ignore="Suspicious0dp">

            <ImageView

                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:scaleType="fitXY"
                android:layout_margin="@dimen/dp_2"
                android:id="@+id/favImageView"
                android:src="@drawable/images6"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/darkGrey"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/_100_00"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/itemname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/hazratganj_lucknow"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/mobile_brand"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buy"
                android:layout_width="68dp"
                android:layout_height="36dp"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/dp_8"

                android:layout_marginEnd="@dimen/dp_6"
                android:background="@color/blue1"
                android:padding="@dimen/dp_6"
                android:text="@string/remove_favourite"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>


</LinearLayout>
