<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/darkGrey">

            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"


                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"

                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:padding="@dimen/dp_8"
                    android:text="@string/describe_what_selling"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edDescribe"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:hint="Enter text (at least 50 characters)"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:minLines="2"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:padding="@dimen/dp_8"
                    android:text="Write Your Address*"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edDescribe2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:hint="Enter text (at least 50 characters)"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:minLines="2"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/dp_10"-->


<!--                    />-->
<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/dp_10"-->


<!--                    />-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:id="@+id/edPhone"
                        android:background="@drawable/box_grey_bg_white"
                        android:hint="@string/str_phone">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/dp_8"
                    android:paddingStart="@dimen/dp_8"
                    android:textColor="@color/red"

                    android:text="@string/required_fields"
                    >

                </androidx.appcompat.widget.AppCompatTextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_60"
                android:layout_gravity="bottom"

                android:gravity="bottom">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue2"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"

                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>






        </LinearLayout>









    </ScrollView>

</LinearLayout>