<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center|start"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_24">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="@dimen/dp_84"
            android:layout_height="@dimen/dp_84"
            android:src="@drawable/myphoto" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserName"
            android:paddingStart="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_8"

            android:text="@string/mr_joe"
            android:layout_toEndOf="@+id/imageUser"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_20"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserEmail"
            android:paddingStart="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_8"

            android:text="@string/abc_xyz_com"
            android:layout_toEndOf="@+id/imageUser"
            android:layout_below="@+id/tvUserName"

            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/dp_6"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:layout_marginLeft="@dimen/dp_16"
            android:text="Earned Credit Points"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".1"
            android:src="@drawable/dollar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:text="100"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:orientation="horizontal"
        android:id="@+id/myorders"
        android:padding="@dimen/dp_8">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:padding="@dimen/dp_6"
            android:layout_gravity="center"
            android:src="@drawable/shoppingbag"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="My Orders"
            android:layout_weight=".8"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:id="@+id/settingsB"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:src="@drawable/ic_settings"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:layout_weight=".8"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right"/>



    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:orientation="horizontal"
        android:id="@+id/logoutB"
        android:padding="@dimen/dp_8">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:padding="@dimen/dp_6"
            android:layout_gravity="center"
            android:src="@drawable/logout"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:layout_weight=".8"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/darkGrey"/>


</LinearLayout>